# shinken

./: .gitattributes  .gitignore  .gitmodules  .project  .pydevproject  .pylintrc  .travis.yml  CONTRIBUTING.rst  Changelog  FOR_DEV  FOR_DEVS.rst  FOR_PACKAGERS  FROM_NAGIOS_TO_SHINKEN  Governance.md  MANIFEST.in  README  README.rst  THANKS  Vagrantfile  clean.sh  install  install_hooks.py  multiprocess.py  pyro_client_ns.py  pyro_server.py  pyro_server_ns.py  requirements.tests.txt  requirements.txt  setup.cfg  setup.cfg.old  setup.py  setup.py.old  setup_parameters.cfg  setuppackage.py  spawn.py  travis.yml
contrib/: install
debian/: README.debian  README.source  changelog  control  copyright  gbp.conf  orig-tar.sh  rules  shinken-arbiter.install  shinken-arbiter.postinst  shinken-arbiter.postrm  shinken-broker.install  shinken-broker.postinst  shinken-broker.postrm  shinken-common.config  shinken-common.default  shinken-common.install  shinken-common.postinst  shinken-common.postrm  shinken-common.preinst  shinken-common.prerm  shinken-common.templates  shinken-module-arbiter-collectd.install  shinken-module-arbiter-hotdependencies.install  shinken-module-arbiter-nsca.install  shinken-module-arbiter-ws.install  shinken-module-broker-graphite.install  shinken-module-broker-livestatus-mongodb.install  shinken-module-broker-livestatus-null.install  shinken-module-broker-livestatus-sqlite.install  shinken-module-broker-livestatus.install  shinken-module-broker-npcdmod.install  shinken-module-broker-webui-cfgpassword.install  shinken-module-broker-webui-graphite.install  shinken-module-broker-webui-mongodb.install  shinken-module-broker-webui-sqlitedb.install  shinken-module-broker-webui-sqlitedb.postint  shinken-module-broker-webui.config  shinken-module-broker-webui.install  shinken-module-broker-webui.postinst  (+28 more)
doc/: About.xml  AdvancedTopics.xml  ConfiguringNagios.xml  Development.xml  GettingStarted.xml  IntegrationWithOtherSoftware.xml  Makefile  NagiosAddons.xml  RunningNagios.xml  SecurityAndPerformanceTuning.xml  TheBasics.xml  all-entities.ent  architecture.swf  broker-modules.odg  check-depandencies.odg  docbook2xhtml.sh  excludes_algo.odg  howto.txt  nagios-architecture.odg  nagios.xml  notifications-and-escalations.odg  pack-agregation.odg  pack-creation.odg  shinken-action-queues.odg  shinken-architecture-common-pool.odg  shinken-architecture-global-realm.odg  shinken-architecture-isolated-pool.odg  shinken-architecture-isolated-realms.odg  shinken-architecture.odg  shinken-conf-dispatching.odg  shinken-external-commands.odg  shinken-scheduler-lost.odg  style.css  xhtml.xsl
doc.old/: Shinken_Legende.odg  architecture.fla  nagios-architecture.odg  notifications-and-escalations.odg  pack-creation.odg  shinken-action-queues.odg  shinken-architecture-global-realm.odg  shinken-architecture.odg  shinken-conf-dispatching.odg  shinken-scheduler-lost.odg  shinken.xcf
docs/: make.bat
etc/: brokerd-for-test.ini  brokerd-windows.ini  brokerd.ini  commands.cfg  commons.cfg  conf-windows.cfg  contactgroups.cfg  contacts.cfg  dependencies.cfg  dev.cfg  discovery.cfg  discovery_rules.cfg  discovery_runs.cfg  escalations.cfg  hostd.cfg  hostgroups.cfg  htpasswd.users  nagios-windows.cfg  nagios.cfg  paths.cfg  pollerd-windows.ini  pollerd.ini  reactionnerd-for-test.ini  reactionnerd-windows.cfg  reactionnerd-windows.ini  reactionnerd.ini  receiverd-windows.ini  receiverd.ini  resource.cfg  sample.cfg  schedulerd-windows.ini  schedulerd.ini  servicegroups.cfg  shinken-specific-high-availability.cfg  shinken-specific-load-balanced-only.cfg  shinken-specific-windows.cfg  shinken-specific.cfg  shinken-windows.cfg  shinken.cfg  shinken.cfg.in  (+5 more)
external_commands/: ACKNOWLEDGE_HOST_PROBLEM.sh  ADD_POLLER.sh  CHANGE_CONTACT_HOST_NOTIFICATION_TIMEPERIOD.sh  CHANGE_HOST_CHECK_COMMAND.sh  PROCESS_HOST_CHECK_RESULT.sh
fedora/: dependencies.cfg  discovery_runs.cfg  receiverd.ini  resource.cfg  schedulerd.ini  (+7 more)
(+4909 files in other folders)
