[metadata]
name = shinken
version = 2.2.0
summary = Shinken is a monitoring framework compatible with Nagios configuration and plugins
author = Gabes Jean
author_email =naparuba@gmail.com
license = GNU Affero General Public License
url = http://www.shinken-monitoring.org
description-file =
    README.rst
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: System :: Monitoring
    Topic :: System :: Networking :: Monitoring

[files]
packages = shinken 
data_files =
    var/log/shinken =
    var/run/shinken =
    var/lib/shinken/modules =
    etc/shinken = etc/*

#[global]
#setup-hooks =
#    install_hooks.main

[install_data]
post-hook.fix_shinken_cfg = install_hooks.fix_shinken_cfg

[entry_points]
console_scripts =
    shinken = shinken.bin.shinken_cli:main
    shinken-arbiter = shinken.bin.shinken_arbiter:main
    shinken-broker = shinken.bin.shinken_broker:main
    shinken-receiver = shinken.bin.shinken_receiver:main
    shinken-reactioner = shinken.bin.shinken_reactioner:main
    shinken-poller = shinken.bin.shinken_poller:main
    shinken-scheduler = shinken.bin.shinken_scheduler:main

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
