[metadata]
name = shinken
summary = Shinken is a monitoring framework compatible with Nagios configuration and plugins
author = Gabes Jean
author_email =naparuba@gmail.com
license = GNU Affero General Public License
url = http://www.shinken-monitoring.org
description-file =
    README.rst

[files]
packages = shinken 
data_files =
    /var/log/shinken =
    /var/run/shinken =
    /var/lib/shinken/modules =
    /var/lib/shinken/cli = cli/*
    /etc/shinken = etc/*

[global]
setup-hooks =
    install_hooks.check_user_shinken
    install_hooks.get_init_scripts

[install_data]
pre-hook.fix_data_files_path = install_hooks.fix_data_files_path
post-hook.fix_shinken_cfg = install_hooks.fix_shinken_cfg

[entry_points]
console_scripts =
    shinken = shinken.bin.shinken_cli:main
    shinken-arbiter = shinken.bin.shinken_arbiter:main
    shinken-broker = shinken.bin.shinken_broker:main
    shinken-receiver = shinken.bin.shinken_receiver:main
    shinken-reactionner = shinken.bin.shinken_reactionner:main
    shinken-poller = shinken.bin.shinken_poller:main
    shinken-scheduler = shinken.bin.shinken_scheduler:main

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
